# school-work

./: README.md
common-calculator/: AdvancedCalculator.md  BasicCalculator.md  Main.md  ModuleDiagram.md  pom.xml
common-calculator-c/: CMakeLists.txt  Makefile  main.c
common-calculator-c/controller/: calculator_controller.c  calculator_controller.h
common-calculator-c/model/: advanced_calculator_model.c  advanced_calculator_model.h  basic_calculator_model.c  basic_calculator_model.h
common-calculator/src/main/java/: Main.java
common-calculator/src/main/java/controller/: CalculatorController.java
common-calculator/src/main/java/model/: AdvancedCalculatorModel.java  BasicCalculatorModel.java
student-management/: GradeManagement.md  Main.md  ModuleDiagram.md  SortManagement.md  StudentManagement.md  pom.xml
student-management-c/: CMakeLists.txt  Makefile
student-management-c/app/: app.c
student-management-c/model/: course.c  course.h  student.c  student.h
student-management-c/service/: grade_service.c  grade_service.h  sort_service.c  sort_service.h  student_service.c  student_service.h
student-management/src/main/java/app/: App.java
student-management/src/main/java/model/: Course.java  Student.java
student-management/src/main/java/service/: GradeService.java  SortService.java  StudentService.java
